fix code for payment history response, product review respone, page for get payment history, adjust enable/disable customer